# fresh

./: .env  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CNAME  README.md  deploy.sh  env.d.ts  gridsome.config.js  index.html  noJS.html  noJs.html  package-lock.json  package.json  pkg.rb  style.css  tsconfig.json  vite.config.ts  webpack.config.js
.circleci/: config.yml
.github/workflows/: deploy.yml
e2e-tests/: site.test.ts
scss/: fresh.scss  style.scss
src/: App.vue  base_program.ts  env.ts  errors.ts  file_system.ts  fresh.ts  index.ts  main.js  main.ts  noJs.ts  settings.ts  version.ts
src/assets/: base.scss  fresh.scss  highlights.scss
src/commands/: cat.ts  cd.ts  clear.ts  command.ts  commands.ts  cv.ts  help.ts  history.ts  index.ts  ls.ts  pkg.ts  print_env.ts  pwd.ts  sitemap.ts  summary.ts  whoami.ts
src/components/: navbar.vue  prompt.vue  stdin.vue  stdout.vue
src/file_system/: changes.ts  directory.ts  file.ts  file_system.ts  fresh.ts  index.ts  learning.ts  node.ts
src/file_system/experience/: cix.ts  honu.ts  n8n.ts  netsoc.ts
src/file_system/freyama.de/: .changelog.md  .coming_soon.md
src/file_system/projects/: crcophony.ts  drizzle.ts  ghl.ts  (+4 more)
src/interfaces/: events.ts  help.ts  inode.ts  option.ts  output.ts
src/layouts/: default.vue
src/pages/: 404.vue  Index.vue
src/pkg/: pkg.json  test.pkg.ts  test.ts
src/pkg/game-of-life/rust/: Cargo.toml
src/pkg/game-of-life/rust/src/: lib.rs
src/plugins/: file_system.ts
src/stores/: current_program.ts  env.ts  history.ts  outputs.ts
static/css/: fresh.css
(+14 files in other folders)
