[package]
name = "game-of-life"
version = "0.1.0"
authors = ["freyama.de"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.1.9"
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
